--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="nav-controls">
             <button id="lang-toggle" class="nav-btn">FR</button>
             <button id="theme-toggle" class="nav-btn"><i class="fas fa-moon"></i></button>
-            <a href="#contact" class="btn-primary mustard-bg">
+            <a href="#contact" class="contact-nav-btn mustard-bg">
                 <span class="en">Contact</span><span class="fr">Contact</span>
             </a>
         </div>
@@ -69,7 +69,7 @@
                         <p class="fr">Je travaille actuellement pour un leader mondial de l'industrie aérospatiale. J'ai participé à des projets multidisciplinaires liés à la conception de produits, au développement et à la R&D.</p>
                         
                         <p class="en">My studies have provided me with broad proficiency in mechanical engineering methods and software packages. Alongside this, I played a key role in developing a new system for the company’s manufacturing plant, leading to annual cost reduction.</p>
-                        <p class="fr">Mes études m'ont apporté une large maîtrise des méthodes d'ingénierie mécanique. J'ai également joué un rôle clé dans le développement d'un nouveau système de fabrication.</p>
+                        <p class="fr">Mes études m'ont apporté une large maîtrise des méthodes d'ingénierie mécanique. J'ai également joué un rôle clé dans le développement d'un nouveau système de fabrication, réduisant les coûts annuels.</p>
                     </div>
 
                     <div class="skills-box">
@@ -108,7 +108,7 @@
                         <span class="date">Mar 2023 — Present</span>
                         <h4 class="en">Customer Service Account Manager</h4>
                         <h4 class="fr">Gestionnaire de Compte Service Client</h4>
-                        <h5>Pratt & Whitney Canada</h5>
+                        <h5 class="company-name">Pratt & Whitney Canada</h5>
                         <ul class="job-list en">
                             <li>Managing customer requests for spares and coordinating with global Quality teams.</li>
                             <li>Supporting AOG orders and providing explanations for lead times/delays.</li>
@@ -116,7 +116,7 @@
                             <li>Develop a Tracking system to monitor discrepancy claims.</li>
                         </ul>
                         <ul class="job-list fr">
-                            <li>Gestion des demandes clients pour les pièces de rechange.</li>
+                            <li>Gestion des demandes clients pour les pièces de rechange et coordination avec les équipes Qualité.</li>
                             <li>Support pour les commandes critiques (AOG).</li>
                             <li>Traitement des devis et des commandes d'achat.</li>
                         </ul>
@@ -129,7 +129,7 @@
                         <span class="date">Jun 2022 — Mar 2023</span>
                         <h4 class="en">Project Cost Analyst</h4>
                         <h4 class="fr">Analyste des Coûts de Projet</h4>
-                        <h5>Pratt & Whitney Canada</h5>
+                        <h5 class="company-name">Pratt & Whitney Canada</h5>
                         <ul class="job-list en">
                             <li>Collaborate with engineering, supply chain, and manufacturing teams.</li>
                             <li>Track progress and provide recommendations for product cost management.</li>
@@ -148,7 +148,7 @@
                         <span class="date">May 2021 — Aug 2021</span>
                         <h4 class="en">Manufacturing & Quality Engineering Analyst</h4>
                         <h4 class="fr">Analyste Ingénierie Qualité & Fabrication</h4>
-                        <h5>Pratt & Whitney Canada (Internship)</h5>
+                        <h5 class="company-name">Pratt & Whitney Canada (Internship)</h5>
                         <ul class="job-list en">
                             <li>Analyze manufacturing, supplier, and engine test data.</li>
                             <li>Develop and improve data collection tools (Access/VBA).</li>
@@ -165,7 +165,7 @@
                         <span class="date">Jan 2020 — Apr 2020</span>
                         <h4 class="en">Quality & Process Certification Analyst</h4>
                         <h4 class="fr">Analyste Qualité & Certification Procédés</h4>
-                        <h5>Pratt & Whitney Canada (Internship)</h5>
+                        <h5 class="company-name">Pratt & Whitney Canada (Internship)</h5>
                         <ul class="job-list en">
                             <li>Design collection processes with SAP GUI API and VBA.</li>
                             <li>Coordinate data flow between suppliers and P&WC.</li>
@@ -186,8 +186,16 @@
             </h2>
             <div class="bento-grid">
                 
-                <div class="bento-item large" style="background-image: url('images/riaupel_main.jpg');"
-                     onclick="openModal('RIAUPEL Energy Connector', 'Design of an autonomous mechanical connection system for robot recharging (self-alignment of connectors). Simulated a demonstration of the concept and assessed its operating limits for Hydro-Quebec/IREQ.', 'https://github.com/adamarzouni', ['images/riaupel_1.jpg', 'images/riaupel_2.jpg'], 'documents/riaupel_report.pdf')">
+                <div class="bento-item large" style="background-image: url('images/riaupel-main.jpg');"
+                     onclick="openModal(
+                        'RIAUPEL Energy Connector', 
+                        'Connecteur Énergie RIAUPEL', 
+                        '<strong>Client:</strong> Patrick Mongenot (IREQ, Hydro-Québec)<br><strong>Team:</strong> Adam Arzouni, Alec Bergeron, Ève Chouinard, Guillaume St-Hilaire, Rosalie Gagnon, Anne-Laurence Trudeau.<br><br><strong>Description:</strong> The goal of the RIAUPEL project is to provide TransÉnergie with robotic means for remote inspection of transmission substations, including the most northern and remote ones. This system consists of a robotic vehicle, its docking station, and a supervision station.<br><br><strong>Objectives:</strong> Design an autonomous mechanical connection system for recharging (connector self-alignment) and a simulator to demonstrate the concept and evaluate its operating limits.', 
+                        '<strong>Client :</strong> Patrick Mongenot (IREQ, Hydro-Québec)<br><strong>Équipe :</strong> Adam Arzouni, Alec Bergeron, Ève Chouinard, Guillaume St-Hilaire, Rosalie Gagnon, Anne-Laurence Trudeau.<br><br><strong>Description :</strong> Le but du projet RIAUPEL est d\'offrir à TransÉnergie des moyens robotisés d’inspection à distance des postes de transport, incluant les postes les plus nordiques et éloignés. Ce système est constitué d’un véhicule robotique, de sa station d’accueil et d’un poste de supervision.<br><br><strong>Objectifs :</strong> Concevoir un système de connexion mécanique autonome pour la recharge (auto-alignement des connecteurs) ainsi qu’un simulateur permettant la démonstration du concept et l’évaluation de ses limites d’opération.', 
+                        'https://www.pi-aer-meca-polymtl.ca/2022-mec8370-02-02-connecteur/', 
+                        ['images/riaupel-main.jpg', 'images/Riaupel-video.mp4', 'images/RIAUPEL VIDEO 2.mp4', 'images/RIAUPEL CONNECT.png', 'images/RIAUPEL CONNECT 2.jpg', 'images/riaupel-2.png', 'images/riaupel-3.png', 'images/riaupel-4.jpeg', 'images/riaupel-5.jpg', 'images/riaupel.jpg'], 
+                        'documents/riaupel_report.pdf'
+                     )">
                     <div class="card-overlay"></div>
                     <div class="card-content">
                         <h3 class="en">Robot Energy Connector</h3><h3 class="fr">Connecteur Énergie Robot</h3>
@@ -197,7 +205,15 @@
                 </div>
 
                 <div class="bento-item" style="background-image: url('images/drone_main.jpg');"
-                     onclick="openModal('Electric Drone Design', '1st Prize - Ecole Polytechnique. Construction of a flying device for rescue. Design and build of a powerful electric motor and mechanical drawings.', 'https://github.com/adamarzouni', ['images/drone_1.jpg', 'images/drone_cad.jpg'], 'documents/drone_specs.pdf')">
+                     onclick="openModal(
+                        'Electric Drone Design', 
+                        'Design de Drone Électrique',
+                        '1st Prize - Ecole Polytechnique. Construction of a flying device for rescue. Design and build of a powerful electric motor and mechanical drawings.', 
+                        '1er Prix - École Polytechnique. Construction d\'un engin volant de sauvetage. Conception et fabrication d\'un moteur électrique puissant et plans mécaniques.',
+                        'https://github.com/adamarzouni', 
+                        ['images/drone_main.jpg', 'images/drone_cad.jpg'], 
+                        'documents/drone_specs.pdf'
+                    )">
                     <div class="card-overlay"></div>
                     <div class="card-content">
                         <h3 class="en">Electric Drone</h3><h3 class="fr">Drone Électrique</h3>
@@ -206,7 +222,15 @@
                 </div>
 
                 <div class="bento-item" style="background-image: url('images/thermo_main.jpg');"
-                     onclick="openModal('Thermodynamics Analysis', 'Analysis of thermal efficiency in propulsion systems using CFD simulations.', '#', ['images/thermo_1.jpg'], 'documents/thermo_analysis.pdf')">
+                     onclick="openModal(
+                        'Thermodynamics Analysis', 
+                        'Analyse Thermodynamique',
+                        'Analysis of thermal efficiency in propulsion systems using CFD simulations.', 
+                        'Analyse de l\'efficacité thermique des systèmes de propulsion par simulations CFD.',
+                        '#', 
+                        ['images/thermo_main.jpg'], 
+                        'documents/thermo_analysis.pdf'
+                    )">
                     <div class="card-overlay"></div>
                     <div class="card-content">
                         <h3 class="en">Propulsion Thermo</h3><h3 class="fr">Thermo Propulsion</h3>
@@ -215,7 +239,15 @@
                 </div>
 
                 <div class="bento-item wide" style="background-image: url('images/data_main.jpg');"
-                     onclick="openModal('Data Automation Tool', 'Developed automated database and visualization tools using VBA and SAP GUI API for manufacturing analysis.', '#', ['images/data_tool_1.jpg'], 'documents/data_manual.pdf')">
+                     onclick="openModal(
+                        'Data Automation Tool', 
+                        'Outil d\'Automatisation de Données',
+                        'Developed automated database and visualization tools using VBA and SAP GUI API for manufacturing analysis.', 
+                        'Développement de bases de données et d\'outils de visualisation automatisés via VBA et SAP GUI API pour l\'analyse de fabrication.',
+                        '#', 
+                        ['images/data_main.jpg'], 
+                        'documents/data_manual.pdf'
+                    )">
                     <div class="card-overlay"></div>
                     <div class="card-content">
                         <h3 class="en">Data Systems</h3><h3 class="fr">Systèmes de Données</h3>
@@ -238,7 +270,7 @@
                         <input name="email" placeholder="Email" type="email" required>
                     </div>
                     <textarea name="message" placeholder="Message" required></textarea>
-                    <button type="submit" class="mustard-bg">
+                    <button type="submit" class="send-btn mustard-bg">
                         <span class="en">Send Message</span><span class="fr">Envoyer</span>
                     </button>
                 </form>
@@ -256,7 +288,8 @@
             <span class="close-modal" onclick="closeModal()">&times;</span>
             <div class="modal-body-complex">
                 <div class="modal-visuals">
-                    <div class="main-modal-img"><img id="m-image" src="" alt="Preview"></div>
+                    <div class="main-modal-img" id="main-media-container">
+                        </div>
                     <div id="m-gallery" class="mini-gallery"></div>
                     <div class="modal-files">
                         <h4 class="en">Project Assets</h4><h4 class="fr">Documents du Projet</h4>
@@ -266,10 +299,18 @@
                     </div>
                 </div>
                 <div class="modal-details">
-                    <h2 id="m-title" class="mustard-text">Title</h2>
+                    <h2 class="mustard-text">
+                        <span id="m-title-en" class="en">Title</span>
+                        <span id="m-title-fr" class="fr">Titre</span>
+                    </h2>
                     <hr class="modal-divider">
-                    <p id="m-desc">Description...</p>
-                    <a id="m-link" href="#" target="_blank" class="github-btn"><i class="fab fa-github"></i> View Project</a>
+                    <div class="desc-content">
+                        <p id="m-desc-en" class="en">Description...</p>
+                        <p id="m-desc-fr" class="fr">Description...</p>
+                    </div>
+                    <a id="m-link" href="#" target="_blank" class="github-btn">
+                        <i class="fas fa-external-link-alt"></i> <span class="en">View Project</span><span class="fr">Voir Projet</span>
+                    </a>
                 </div>
             </div>
         </div>
