--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                      onclick="openModal(
                         'RIAUPEL Energy Connector', 
                         'Connecteur Énergie RIAUPEL', 
-                        '<strong>Client:</strong> Patrick Mongenot (IREQ, Hydro-Québec)<br><strong>Team:</strong> Adam Arzouni, Alec Bergeron, Ève Chouinard, Guillaume St-Hilaire, Rosalie Gagnon, Anne-Laurence Trudeau.<br><br><strong>Description:</strong> The goal of the RIAUPEL project is to provide TransÉnergie with robotic means for remote inspection of transmission substations, including the most northern and remote ones. This system consists of a robotic vehicle, its docking station, and a supervision station.<br><br><strong>Objectives:</strong> Design an autonomous mechanical connection system for recharging (connector self-alignment) and a simulator to demonstrate the concept and evaluate its operating limits.', 
-                        '<strong>Client :</strong> Patrick Mongenot (IREQ, Hydro-Québec)<br><strong>Équipe :</strong> Adam Arzouni, Alec Bergeron, Ève Chouinard, Guillaume St-Hilaire, Rosalie Gagnon, Anne-Laurence Trudeau.<br><br><strong>Description :</strong> Le but du projet RIAUPEL est d\'offrir à TransÉnergie des moyens robotisés d’inspection à distance des postes de transport, incluant les postes les plus nordiques et éloignés. Ce système est constitué d’un véhicule robotique, de sa station d’accueil et d’un poste de supervision.<br><br><strong>Objectifs :</strong> Concevoir un système de connexion mécanique autonome pour la recharge (auto-alignement des connecteurs) ainsi qu’un simulateur permettant la démonstration du concept et l’évaluation de ses limites d’opération.', 
+                        '<strong>Client:</strong> Patrick Mongenot (IREQ, Hydro-Québec)<br><strong>Team:</strong> Adam Arzouni, Alec Bergeron, Ève Chouinard, Guillaume St-Hilaire, Rosalie Gagnon, Anne-Laurence Trudeau.<br><br><strong>Description:</strong> The goal of the RIAUPEL project is to provide TransÉnergie with robotic means for remote inspection of transmission substations. This system consists of a robotic vehicle, its docking station, and a supervision station.<br><br><strong>Objectives:</strong> Design an autonomous mechanical connection system for recharging (connector self-alignment).', 
+                        '<strong>Client :</strong> Patrick Mongenot (IREQ, Hydro-Québec)<br><strong>Équipe :</strong> Adam Arzouni, Alec Bergeron, Ève Chouinard, Guillaume St-Hilaire, Rosalie Gagnon, Anne-Laurence Trudeau.<br><br><strong>Description :</strong> Le but du projet RIAUPEL est d\'offrir à TransÉnergie des moyens robotisés d’inspection à distance des postes de transport. Ce système est constitué d’un véhicule robotique, de sa station d’accueil et d’un poste de supervision.<br><br><strong>Objectifs :</strong> Concevoir un système de connexion mécanique autonome pour la recharge.', 
                         'https://www.pi-aer-meca-polymtl.ca/2022-mec8370-02-02-connecteur/', 
                         ['images/riaupel-main.jpg', 'images/Riaupel-video.mp4', 'images/RIAUPEL VIDEO 2.mp4', 'images/RIAUPEL CONNECT.png', 'images/RIAUPEL CONNECT 2.jpg', 'images/riaupel-2.png', 'images/riaupel-3.png', 'images/riaupel-4.jpeg', 'images/riaupel-5.jpg', 'images/riaupel.jpg'], 
                         'documents/riaupel_report.pdf'
@@ -236,37 +236,37 @@
                     </div>
                 </div>
 
-                <div class="bento-item" style="background-image: url('images/thermo_main.jpg');"
+                <div class="bento-item" style="background-image: url('images/PI3.jpg');"
                      onclick="openModal(
-                        'Thermodynamics Analysis', 
-                        'Analyse Thermodynamique',
-                        'Analysis of thermal efficiency in propulsion systems using CFD simulations.', 
-                        'Analyse de l\'efficacité thermique des systèmes de propulsion par simulations CFD.',
+                        'SleepSafe – Smart Baby Monitoring', 
+                        'SleepSafe – Surveillance Intelligente',
+                        '<strong>Client:</strong> New Parents<br><strong>Team:</strong> Adam Arzouni<br><br><strong>Description:</strong> A smart baby-monitoring device that controls bedroom lighting and detects a child’s movement during sleep. It connects to Wi-Fi and Amazon Alexa to send real-time alerts.<br><br><strong>Objectives:</strong> Detect movement, control lighting, send Alexa alerts, and improve child safety.', 
+                        '<strong>Client :</strong> Nouveaux Parents<br><strong>Équipe :</strong> Adam Arzouni<br><br><strong>Description :</strong> Un dispositif intelligent de surveillance pour bébé qui contrôle l\'éclairage de la chambre et détecte les mouvements. Connexion Wi-Fi et Amazon Alexa pour alertes en temps réel.<br><br><strong>Objectifs :</strong> Détecter les mouvements, contrôler l\'éclairage, envoyer des alertes Alexa et améliorer la sécurité.',
                         '#', 
-                        ['images/thermo_main.jpg'], 
-                        'documents/thermo_analysis.pdf'
+                        ['images/PI3.jpg', 'images/PI3 (2).jpg', 'images/CATIA.PNG'], 
+                        'documents/PI3.pdf'
                     )">
                     <div class="card-overlay"></div>
                     <div class="card-content">
-                        <h3 class="en">Propulsion Thermo</h3><h3 class="fr">Thermo Propulsion</h3>
-                        <p>CFD Analysis</p>
+                        <h3 class="en">SleepSafe Monitoring</h3><h3 class="fr">Surveillance SleepSafe</h3>
+                        <p>Smart Home Tech</p>
                     </div>
                 </div>
 
-                <div class="bento-item wide" style="background-image: url('images/data_main.jpg');"
+                <div class="bento-item wide" style="background-image: url('images/pi23.jpg');"
                      onclick="openModal(
-                        'Data Automation Tool', 
-                        'Outil d\'Automatisation de Données',
-                        'Developed automated database and visualization tools using VBA and SAP GUI API for manufacturing analysis.', 
-                        'Développement de bases de données et d\'outils de visualisation automatisés via VBA et SAP GUI API pour l\'analyse de fabrication.',
+                        'Autonomous Delivery Robot', 
+                        'Robot Livreur Autonome',
+                        '<strong>Client:</strong> CEM5102<br><strong>Team:</strong> Araujo Domingues, Arzouni, Doyle, Keita, Rafi, Rahmani.<br><br><strong>Description:</strong> Design and development of an autonomous delivery robot capable of performing transport tasks without human intervention. Controlled via Arduino with motors and proximity sensors.<br><br><strong>Objectives:</strong> Navigate autonomously, handle objects, detect obstacles, and optimize mechanical design.', 
+                        '<strong>Client :</strong> CEM5102<br><strong>Équipe :</strong> Araujo Domingues, Arzouni, Doyle, Keita, Rafi, Rahmani.<br><br><strong>Description :</strong> Conception et développement d\'un robot livreur autonome capable d\'effectuer des tâches de transport sans intervention humaine. Contrôlé via Arduino avec moteurs et capteurs de proximité.<br><br><strong>Objectifs :</strong> Navigation autonome, manipulation d\'objets, détection d\'obstacles et optimisation mécanique.',
                         '#', 
-                        ['images/data_main.jpg'], 
-                        'documents/data_manual.pdf'
+                        ['images/pi23.jpg', 'images/pi24.jpg', 'images/pi26.jpg', 'images/pi27.png', 'images/pi28.png', 'images/pi2.mp4', 'images/pi22.mp4', 'images/pi25.mp4'], 
+                        'documents/Le-projet-coursier.1.pdf'
                     )">
                     <div class="card-overlay"></div>
                     <div class="card-content">
-                        <h3 class="en">Data Systems</h3><h3 class="fr">Systèmes de Données</h3>
-                        <p>Automation & Analytics</p>
+                        <h3 class="en">Delivery Robot</h3><h3 class="fr">Robot Livreur</h3>
+                        <p>Autonomous Prototype</p>
                     </div>
                 </div>
             </div>
