--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                      onclick="openModal(
                         'RIAUPEL Energy Connector', 
                         'Connecteur Énergie RIAUPEL', 
-                        '<strong>Client:</strong> Patrick Mongenot (IREQ, Hydro-Québec)<br><strong>Team:</strong> Adam Arzouni, Alec Bergeron, Ève Chouinard, Guillaume St-Hilaire, Rosalie Gagnon, Anne-Laurence Trudeau.<br><br><strong>Description:</strong> The goal of the RIAUPEL project is to provide TransÉnergie with robotic means for remote inspection of transmission substations. This system consists of a robotic vehicle, its docking station, and a supervision station.<br><br><strong>Objectives:</strong> Design an autonomous mechanical connection system for recharging (connector self-alignment).', 
-                        '<strong>Client :</strong> Patrick Mongenot (IREQ, Hydro-Québec)<br><strong>Équipe :</strong> Adam Arzouni, Alec Bergeron, Ève Chouinard, Guillaume St-Hilaire, Rosalie Gagnon, Anne-Laurence Trudeau.<br><br><strong>Description :</strong> Le but du projet RIAUPEL est d\'offrir à TransÉnergie des moyens robotisés d’inspection à distance des postes de transport. Ce système est constitué d’un véhicule robotique, de sa station d’accueil et d’un poste de supervision.<br><br><strong>Objectifs :</strong> Concevoir un système de connexion mécanique autonome pour la recharge.', 
+                        '<strong>Client:</strong> Patrick Mongenot (IREQ, Hydro-Québec)<br><strong>Team:</strong> Adam Arzouni, Alec Bergeron, Ève Chouinard, Guillaume St-Hilaire, Rosalie Gagnon, Anne-Laurence Trudeau.<br><br><strong>Description:</strong> The goal of the RIAUPEL project is to provide TransÉnergie with robotic means for remote inspection of transmission substations, including the most northern and remote ones. This system consists of a robotic vehicle, its docking station, and a supervision station.<br><br><strong>Objectives:</strong> Design an autonomous mechanical connection system for recharging (connector self-alignment) and a simulator to demonstrate the concept and evaluate its operating limits.', 
+                        '<strong>Client :</strong> Patrick Mongenot (IREQ, Hydro-Québec)<br><strong>Équipe :</strong> Adam Arzouni, Alec Bergeron, Ève Chouinard, Guillaume St-Hilaire, Rosalie Gagnon, Anne-Laurence Trudeau.<br><br><strong>Description :</strong> Le but du projet RIAUPEL est d\'offrir à TransÉnergie des moyens robotisés d’inspection à distance des postes de transport, incluant les postes les plus nordiques et éloignés. Ce système est constitué d’un véhicule robotique, de sa station d’accueil et d’un poste de supervision.<br><br><strong>Objectifs :</strong> Concevoir un système de connexion mécanique autonome pour la recharge (auto-alignement des connecteurs) ainsi qu’un simulateur permettant la démonstration du concept et l’évaluation de ses limites d’opération.', 
                         'https://www.pi-aer-meca-polymtl.ca/2022-mec8370-02-02-connecteur/', 
                         ['images/riaupel-main.jpg', 'images/Riaupel-video.mp4', 'images/RIAUPEL VIDEO 2.mp4', 'images/RIAUPEL CONNECT.png', 'images/RIAUPEL CONNECT 2.jpg', 'images/riaupel-2.png', 'images/riaupel-3.png', 'images/riaupel-4.jpeg', 'images/riaupel-5.jpg', 'images/riaupel.jpg'], 
                         'documents/riaupel_report.pdf'
@@ -219,7 +219,41 @@
                     </div>
                 </div>
 
-                <div class="bento-item" style="background-image: url('images/drone_main.jpg');"
+                <div class="bento-item" style="background-image: url('images/PI3.jpg');"
+                     onclick="openModal(
+                        'SleepSafe – Smart Baby Monitor', 
+                        'SleepSafe – Moniteur Bébé',
+                        '<strong>Client:</strong> New Parents<br><strong>Team:</strong> Adam Arzouni<br><br><strong>Description:</strong> This project involves the development of a smart baby-monitoring device that controls bedroom lighting and detects a child’s movement during sleep. The system is designed to help new parents supervise their baby remotely and maintain a safe and healthy sleep environment. The device connects to Wi-Fi and communicates with Amazon Alexa to send real-time alerts when movement is detected.<br><br><strong>Objectives:</strong> Develop a smart system to monitor a child’s sleep environment, detect movement, automatically control lighting, and send alerts via Alexa.', 
+                        '<strong>Client :</strong> Nouveaux Parents<br><strong>Équipe :</strong> Adam Arzouni<br><br><strong>Description :</strong> Ce projet implique le développement d\'un dispositif intelligent de surveillance pour bébé qui contrôle l\'éclairage de la chambre et détecte les mouvements de l\'enfant pendant son sommeil. Le système aide les parents à superviser leur bébé à distance. L\'appareil se connecte au Wi-Fi et communique avec Amazon Alexa pour envoyer des alertes en temps réel.<br><br><strong>Objectifs :</strong> Développer un système intelligent pour surveiller le sommeil, détecter les mouvements, contrôler automatiquement l\'éclairage et envoyer des alertes via Alexa.',
+                        '#', 
+                        ['images/PI3.jpg', 'images/PI3 (2).jpg', 'images/CATIA.PNG'], 
+                        'documents/PI3.pdf'
+                    )">
+                    <div class="card-overlay"></div>
+                    <div class="card-content">
+                        <h3 class="en">SleepSafe Monitor</h3><h3 class="fr">Moniteur SleepSafe</h3>
+                        <p>Smart Baby Monitoring</p>
+                    </div>
+                </div>
+
+                <div class="bento-item" style="background-image: url('images/pi23.jpg');"
+                     onclick="openModal(
+                        'Autonomous Delivery Robot', 
+                        'Robot Livreur Autonome',
+                        '<strong>Client:</strong> CEM5102<br><strong>Team:</strong><ul class=\'team-list\'><li>Tania Araujo Domingues</li><li>Adam Arzouni</li><li>Tristan Doyle</li><li>El Hadj Keita</li><li>Yassine Rafi</li><li>Hamza Rahmani</li></ul><br><strong>Description:</strong> This project involved the design and development of an autonomous delivery robot capable of performing transport tasks without human intervention. The goal was to address challenges such as delivery efficiency and contactless logistics inspired by pandemic constraints.<br><br><strong>Objectives:</strong> Design and build an autonomous delivery robot. Enable navigation without human control. Perform object handling tasks. Optimize mechanical design for performance.', 
+                        '<strong>Client :</strong> CEM5102<br><strong>Équipe :</strong><ul class=\'team-list\'><li>Tania Araujo Domingues</li><li>Adam Arzouni</li><li>Tristan Doyle</li><li>El Hadj Keita</li><li>Yassine Rafi</li><li>Hamza Rahmani</li></ul><br><strong>Description :</strong> Ce projet a impliqué la conception et le développement d\'un robot livreur autonome capable d\'effectuer des tâches de transport sans intervention humaine. L\'objectif était de répondre aux défis tels que l\'efficacité de la livraison et la logistique sans contact.<br><br><strong>Objectifs :</strong> Concevoir et construire un robot livreur autonome. Permettre la navigation sans contrôle humain. Effectuer des tâches de manipulation d\'objets. Optimiser la conception mécanique.',
+                        '#', 
+                        ['images/pi23.jpg', 'images/pi2.mp4', 'images/pi22.mp4', 'images/pi25.mp4', 'images/pi24.jpg', 'images/pi26.jpg', 'images/pi27.png', 'images/pi28.png'], 
+                        'documents/PI2 Rapport.pdf'
+                    )">
+                    <div class="card-overlay"></div>
+                    <div class="card-content">
+                        <h3 class="en">Delivery Robot</h3><h3 class="fr">Robot Livreur</h3>
+                        <p>Autonomous Logistics</p>
+                    </div>
+                </div>
+
+                <div class="bento-item wide" style="background-image: url('images/drone_main.jpg');"
                      onclick="openModal(
                         'Electric Drone Design', 
                         'Design de Drone Électrique',
@@ -236,39 +270,23 @@
                     </div>
                 </div>
 
-                <div class="bento-item" style="background-image: url('images/PI3.jpg');"
+                <div class="bento-item" style="background-image: url('images/PI1.jpg');"
                      onclick="openModal(
-                        'SleepSafe – Smart Baby Monitoring', 
-                        'SleepSafe – Surveillance Intelligente',
-                        '<strong>Client:</strong> New Parents<br><strong>Team:</strong> Adam Arzouni<br><br><strong>Description:</strong> A smart baby-monitoring device that controls bedroom lighting and detects a child’s movement during sleep. It connects to Wi-Fi and Amazon Alexa to send real-time alerts.<br><br><strong>Objectives:</strong> Detect movement, control lighting, send Alexa alerts, and improve child safety.', 
-                        '<strong>Client :</strong> Nouveaux Parents<br><strong>Équipe :</strong> Adam Arzouni<br><br><strong>Description :</strong> Un dispositif intelligent de surveillance pour bébé qui contrôle l\'éclairage de la chambre et détecte les mouvements. Connexion Wi-Fi et Amazon Alexa pour alertes en temps réel.<br><br><strong>Objectifs :</strong> Détecter les mouvements, contrôler l\'éclairage, envoyer des alertes Alexa et améliorer la sécurité.',
+                        'Phoenix – Fire Rescue Drone', 
+                        'Phoenix – Drone Incendie',
+                        '<strong>Team:</strong> Adam Arzouni, Emilie Huynh, Jean-Christophe Fronteddu, Louis St-Laurent, Marc Alexandre Savard<br><br><strong>Description:</strong> Phoenix is a lightweight rescue drone designed to evacuate injured people trapped in forest fires. The drone’s structure is engineered to be fire-resistant, sealed, and lightweight, with a total mass of approximately 300g to meet propulsion constraints.<br><br><strong>Objectives:</strong> Design a drone capable of rescuing injured people from forest fires. Ensure the structure is lightweight, sealed, and fire-resistant. Integrate all subsystems into a safe and functional aircraft.', 
+                        '<strong>Équipe :</strong> Adam Arzouni, Emilie Huynh, Jean-Christophe Fronteddu, Louis St-Laurent, Marc Alexandre Savard<br><br><strong>Description :</strong> Phoenix est un drone de sauvetage léger conçu pour évacuer les blessés emprisonnés dans les feux de forêt. La structure est résistante au feu, étanche et légère (env. 300g) pour respecter les contraintes de propulsion.<br><br><strong>Objectifs :</strong> Concevoir un drone capable de sauver des blessés des feux de forêt. Assurer une structure légère, étanche et résistante au feu.',
                         '#', 
-                        ['images/PI3.jpg', 'images/PI3 (2).jpg', 'images/CATIA.PNG'], 
-                        'documents/PI3.pdf'
+                        ['images/PI1.jpg', 'images/IMG_5254_mp4.mp4', 'images/PI11.jpg', 'images/PI12.jpg', 'images/PI19.jpg'], 
+                        'documents/rapport-3-final.pdf'
                     )">
                     <div class="card-overlay"></div>
                     <div class="card-content">
-                        <h3 class="en">SleepSafe Monitoring</h3><h3 class="fr">Surveillance SleepSafe</h3>
-                        <p>Smart Home Tech</p>
+                        <h3 class="en">Phoenix Drone</h3><h3 class="fr">Drone Phoenix</h3>
+                        <p>Fire Rescue System</p>
                     </div>
                 </div>
 
-                <div class="bento-item wide" style="background-image: url('images/pi23.jpg');"
-                     onclick="openModal(
-                        'Autonomous Delivery Robot', 
-                        'Robot Livreur Autonome',
-                        '<strong>Client:</strong> CEM5102<br><strong>Team:</strong> Araujo Domingues, Arzouni, Doyle, Keita, Rafi, Rahmani.<br><br><strong>Description:</strong> Design and development of an autonomous delivery robot capable of performing transport tasks without human intervention. Controlled via Arduino with motors and proximity sensors.<br><br><strong>Objectives:</strong> Navigate autonomously, handle objects, detect obstacles, and optimize mechanical design.', 
-                        '<strong>Client :</strong> CEM5102<br><strong>Équipe :</strong> Araujo Domingues, Arzouni, Doyle, Keita, Rafi, Rahmani.<br><br><strong>Description :</strong> Conception et développement d\'un robot livreur autonome capable d\'effectuer des tâches de transport sans intervention humaine. Contrôlé via Arduino avec moteurs et capteurs de proximité.<br><br><strong>Objectifs :</strong> Navigation autonome, manipulation d\'objets, détection d\'obstacles et optimisation mécanique.',
-                        '#', 
-                        ['images/pi23.jpg', 'images/pi24.jpg', 'images/pi26.jpg', 'images/pi27.png', 'images/pi28.png', 'images/pi2.mp4', 'images/pi22.mp4', 'images/pi25.mp4'], 
-                        'documents/Le-projet-coursier.1.pdf'
-                    )">
-                    <div class="card-overlay"></div>
-                    <div class="card-content">
-                        <h3 class="en">Delivery Robot</h3><h3 class="fr">Robot Livreur</h3>
-                        <p>Autonomous Prototype</p>
-                    </div>
-                </div>
             </div>
         </section>
 
